<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Bluetooth</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Hello world!</string>
   <string name="on">Turn On</string>
   <string name="off">Turn Off</string>
   <string name="Visible">Get Visible</string>
   <string name="buttonPairedDevices">List Paired Devices</string>
   <string name="buttonUnpairedDevices">List Device(s) Around</string>
   <string name="ListPairedDevices">List of Paired Devices :</string>
   <string name="ListUnpairedDevices">List of the bluetooth devices around :</string>

</resources>